--- a/newVersion-V3/Makefile
+++ b/newVersion-V3/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -W -Wall -ansi -std=c99 -g
 LIBS = -L./SDL2_ttf/.libs -L./SDL2_image/.libs
 LDFLAGS = `sdl2-config --cflags --libs` -lSDL2_ttf -lSDL2_image -lSDL2_ttf
 INCLUDES = -I./SDL2_ttf -I./SDL2_image
-EXEC = fastcar
+EXEC = main
 SRC = main.c fonctions_SDL.c data.c logic.c colision.c events.c graphics.c liste.c
 OBJ = $(SRC:.c=.o) -lm
 
